# arch_lab_4

./: CMakeLists.txt  README.md  start.sh  start_writer.sh
config/: config.cpp  config.h
database/cache/: cache.cpp  cache.h
database/database/: database.cpp  database.h
database/person/: person.cpp  person.h
docker/: docker-compose.yml
docker/mysql/: Dockerfile  commands.sql
docker/proxysql/: Dockerfile  proxysql.cnf
web_server/: http_request_factory.h  http_web_server.h
web_server/handlers/: person_handler.h
writer/: writer_main.cpp
